--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "twig": "^1.15.4",
     "pug": "^3.0.0",
-    "ejs": "~2.6.1"
+    "ejs": "~2.6.1",
+    "body-parser": "1.19.0"
   }
 }
