--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "twig": "^1.15.4",
     "pug": "^3.0.0",
     "ejs": "~2.6.1",
-    "body-parser": "1.19.0"
+    "body-parser": "1.19.0",
+    "express-validator": "6.8.0"
   }
 }
